--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         "dmstr/yii2-adminlte-asset": "^2.1",
         "2amigos/yii2-date-picker-widget": "~1.0",
         "kartik-v/yii2-widget-fileinput": "dev-master",
-        "onmotion/yii2-survey": "*"
+        "onmotion/yii2-survey": "*",
+        "philippfrenzel/yii2fullcalendar": "*",
+        "kartik-v/yii2-widget-timepicker": "*",
+        "2amigos/yii2-date-time-picker-widget": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
